backend/ostree-server-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.network/hawknet: "true"
    io.kompose.service: ostree
  name: ostree
spec:
  containers:
    - name: ostree
      image: fullmetalupdate/ostree-server:v1.0
      ports:
        - containerPort: 22
        - containerPort: 8000
      resources: {}
  restartPolicy: Always 
status: {}
