backend/rabbitmq-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.network/hawknet: "true"
    io.kompose.service: rabbitmq
  name: rabbitmq
spec:
  containers:
    - env:
        - name: RABBITMQ_DEFAULT_VHOST
          value: /
      image: rabbitmq:3-management
      name: rabbitmq
      ports:
        - containerPort: 15672
        - containerPort: 5672
      resources: {}
  restartPolicy: Always 
status: {}
