backend/ostree-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: ostree
  name: ostree
spec:
  ports:
    - name: "22"
      port: 22
      targetPort: 22
    - name: "8000"
      port: 8000
      targetPort: 8000
  selector:
    io.kompose.service: ostree
status:
  loadBalancer: {}
